Fetch configurable gold history from AlphaVantage